Model5, Model6 inferencing code

--- a/src/tasks/task-4-model-development-shibendra/model_5.ipynb
+++ b/src/tasks/task-4-model-development-shibendra/model_5.ipynb
@@ -4391,7 +4391,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import joblib\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import IPython.display as ipd\n",
+        "import librosa\n",
+        "import librosa.display\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -4400,7 +4419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -4432,24 +4451,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 4,
       "metadata": {
         "id": "i0-lHl_rXN68"
       },
       "outputs": [],
       "source": [
-        "import joblib\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import os\n",
-        "import IPython.display as ipd\n",
-        "import librosa\n",
-        "import librosa.display\n",
-        "import warnings\n",
-        "warnings.filterwarnings('ignore')\n",
-        "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline\n",
-        "\n",
         "def model_5_inference(model_path,audio_file):\n",
         "    \n",
         "    #load model\n",
@@ -4484,7 +4491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 5,
       "metadata": {
         "id": "vcwoPthgXN9q"
       },
@@ -4502,7 +4509,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 6,
       "metadata": {
         "id": "ZZotJh23XOAv"
       },
