--- a/src/tasks/task-4-model-development-shibendra/model_6.ipynb
+++ b/src/tasks/task-4-model-development-shibendra/model_6.ipynb
@@ -2512,7 +2512,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2520,18 +2520,7 @@
         "id": "r0WIUVPP2LHh",
         "outputId": "c1529e68-fba8-4e8a-8236-7be9dbb47fbc"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['respiratory_db_lightgbm_model.joblib']"
-            ]
-          },
-          "execution_count": 42,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import joblib\n",
         "joblib.dump(lgbmclf, 'respiratory_db_lightgbm_model.joblib')"
@@ -2553,23 +2542,190 @@
         "id": "moXS-Hcq2LMl"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Model Inference"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "import joblib\n",
+        "model = joblib.load('respiratory_db_lightgbm_model.joblib')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['healthy' 'mild' 'moderate' 'severe']\n"
+          ]
+        }
+      ],
+      "source": [
+        "encoded_labels = model.classes_\n",
+        "print(encoded_labels)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import joblib\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import IPython.display as ipd\n",
+        "import librosa\n",
+        "import librosa.display\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "fckBLSV00Ltz"
+      },
+      "outputs": [],
+      "source": [
+        "def features_extractor(file_name):\n",
+        "    audio, sample_rate = librosa.load(file_name)\n",
+        "\n",
+        "    mfccs_features = librosa.feature.mfcc(y=audio, sr=sample_rate, n_mfcc=16)\n",
+        "    mfccs_scaled_features = np.mean(mfccs_features.T,axis=0)\n",
+        "\n",
+        "    mel_spectrogram = librosa.feature.melspectrogram(y=audio, sr=sample_rate, n_fft=2048, hop_length=512, n_mels=10)\n",
+        "    mel_scaled_features = np.mean(mel_spectrogram.T,axis=0)\n",
+        "\n",
+        "    zcr = librosa.feature.zero_crossing_rate(audio)\n",
+        "    zcr_scaled_features = np.mean(zcr.T,axis=0)\n",
+        "\n",
+        "    spectral_centroid = librosa.feature.spectral_centroid(y=audio, sr=sample_rate)\n",
+        "    spectral_centroid_scaled_features = np.mean(spectral_centroid.T,axis=0)\n",
+        "\n",
+        "    spectral_rolloff = librosa.feature.spectral_rolloff(y=audio, sr=sample_rate)\n",
+        "    spectral_rolloff_scaled_features = np.mean(spectral_rolloff.T,axis=0)\n",
+        "\n",
+        "    stft = np.abs(librosa.stft(audio))\n",
+        "    chroma = librosa.feature.chroma_stft(S=stft, sr=sample_rate)\n",
+        "    chroma_scaled_features = np.mean(chroma.T,axis=0)\n",
+        "\n",
+        "\n",
+        "    return mfccs_scaled_features,mel_scaled_features,zcr_scaled_features,spectral_centroid_scaled_features,spectral_rolloff_scaled_features, chroma_scaled_features"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "id": "b2njCEsm0LwO"
+      },
+      "outputs": [],
+      "source": [
+        "def model_6_inference(model_path,audio_file):\n",
+        "    \n",
+        "    #load model\n",
+        "    clf2 = joblib.load(model_path)\n",
+        "\n",
+        "    #preprocess audio file\n",
+        "    extracted_features = []\n",
+        "    mfcc,mels,zcr,sc,sr,chroma = features_extractor(audio_file)\n",
+        "    extracted_features.append([mfcc[0],mfcc[1],mfcc[2],mfcc[3],mfcc[4],mfcc[5],\\\n",
+        "                               mfcc[6],mfcc[7],mfcc[8],mfcc[9],mfcc[10],mfcc[11],\\\n",
+        "                                mfcc[12],mfcc[13],mfcc[14],mfcc[15],\\\n",
+        "                                    mels[0],mels[1],mels[2],mels[3],mels[4],mels[5],\\\n",
+        "                                        mels[6],mels[7],mels[8],mels[9],\\\n",
+        "                                            zcr[0],sc[0],sr[0],chroma[0]])\n",
+        "    \n",
+        "    audio_features = pd.DataFrame(extracted_features,columns=['mfcc1','mfcc2','mfcc3','mfcc4','mfcc5',\\\n",
+        "                                                                 'mfcc6','mfcc7','mfcc8','mfcc9','mfcc10',\\\n",
+        "                                                                    'mfcc11','mfcc12','mfcc13','mfcc14',\\\n",
+        "                                                                        'mfcc15','mfcc16',\\\n",
+        "                                                                            'mels1','mels2','mels3',\\\n",
+        "                                                                                'mels4','mels5','mels6',\\\n",
+        "                                                                                    'mels7','mels8','mels9','mels10',\\\n",
+        "                                                                                        'zcr','sc','sr','chroma'])\n",
+        "    #get prediction\n",
+        "    y_test_pred = clf2.predict(audio_features)[0]\n",
+        "   \n",
+        "    #status label reverse mapping\n",
+        "    #prediction = reverse_status_map.get(y_test_pred)\n",
+        "    \n",
+        "    return y_test_pred"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "audio_file1_healthy = \"model_6_test_data/healthy/123_1b1_Al_sc_Meditron.wav\"\n",
+        "audio_file2_healthy = \"model_6_test_data/healthy/143_1b1_Al_sc_Meditron.wav\"\n",
+        "audio_file3_mild = \"model_6_test_data/mild/149_1b1_Al_sc_Meditron.wav\"\n",
+        "audio_file4_moderate = \"model_6_test_data/moderate/133_3p2_Pr_mc_AKGC417L.wav\"\n",
+        "audio_file5_moderate = \"model_6_test_data/moderate/134_2b1_Al_mc_LittC2SE.wav\"\n",
+        "audio_file6_severe = \"model_6_test_data/severe/122_2b1_Al_mc_LittC2SE.wav\"\n",
+        "audio_file7_severe = \"model_6_test_data/severe/135_2b1_Ar_mc_LittC2SE.wav\"\n",
+        "\n",
+        "model_6_file = \"respiratory_db_lightgbm_model.joblib\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "healthy\n",
+            "healthy\n",
+            "mild\n",
+            "moderate\n",
+            "moderate\n",
+            "severe\n",
+            "severe\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(model_6_inference(model_6_file,audio_file1_healthy))\n",
+        "print(model_6_inference(model_6_file,audio_file2_healthy))\n",
+        "print(model_6_inference(model_6_file,audio_file3_mild))\n",
+        "print(model_6_inference(model_6_file,audio_file4_moderate))\n",
+        "print(model_6_inference(model_6_file,audio_file5_moderate))\n",
+        "print(model_6_inference(model_6_file,audio_file6_severe))\n",
+        "print(model_6_inference(model_6_file,audio_file7_severe))"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "fckBLSV00Ltz"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "b2njCEsm0LwO"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -2583,7 +2739,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.13"
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
